test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 22 Aug 2025 05:08:52 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="7xHQ9RmGMRvCQaTTg/Fw9/yXtn/SOWqF", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 5

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}